welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
do{
	 for(i<- 1 to 6){
		var nbPas = 0
		for (i<- 1 to 6){
			avance()
			nbPas = nbPas + 1 
		}
		for ( i<- 1 to nbPas){
			recule()
		}
		def vuBiscuit(){
			if (estSurBiscuit()){
				for (i<- 1 to nbPas){
				recule()
				}
			return true
			}
		}
	 }
}while (!vuBiscuit())



	
	


